--- a/lmsproject/Gemfile
+++ b/lmsproject/Gemfile
@@ -13,7 +13,7 @@ gem 'uglifier', '>= 1.3.0'
 gem 'coffee-rails', '~> 4.1.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
-
+gem 'jquery-turbolinks'
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -27,9 +27,9 @@ gem 'devise'
 
 gem 'rolify'
 
-gem 'authority'
-
 gem 'puma'
+
+gem 'summernote-rails', '~> 0.7.1.0'
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
