--- a/lmsproject/Gemfile
+++ b/lmsproject/Gemfile
@@ -25,11 +25,22 @@ gem 'activeadmin', github: 'activeadmin'
 
 gem 'devise'
 
-gem 'rolify'
-
 gem 'puma'
 
-gem 'summernote-rails', '~> 0.7.1.0'
+gem 'bootstrap-sass', '~> 3.2.0'
+
+gem 'autoprefixer-rails'
+
+gem 'simple_form'
+
+# You'll need to include the following dependencies of Summernote
+gem "font-awesome-rails"
+
+# This is the right gem to use summernote editor in Rails projects.
+gem 'summernote-rails'
+
+gem 'codemirror-rails'
+
 
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
@@ -44,6 +55,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
   gem 'faker'
+  gem 'pry-rails'
 end
 
 group :development do
